added locations